képek webp-re alakítva

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section>
             <button class="bal">bal</button>
-            <div class="nagykep"><img src="kepek/DSC7025.jpg" alt="kép"></div>
+            <div class="nagykep"><img src="kepek/DSC7025.webp" alt="kép"></div>
             <button class="jobb">jobb</button>
         </section>
         <article>
