ikonok hozzáadása a gombokhoz

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <main>
         <section>
-            <button class="bal">bal</button>
+            <button class="bal">előző kép</button>
             <div class="nagykep"><img src="kepek/DSC7025.webp" alt="kép"></div>
-            <button class="jobb">jobb</button>
+            <button class="jobb">következő kép</button>
         </section>
         <article>
 
