--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="nagykep"><img src="kepek/DSC7025.webp" alt="kép"></div>
             <button class="jobb">következő kép</button>
         </section>
+        <div class="szamlalo"></div>
         <article>
 
         </article>
