--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <main>
         <section>
             <button class="bal">előző kép</button>
-            <div class="nagykep"><img src="kepek/DSC7025.webp" alt="kép"></div>
+        <div class="nagykep">
+          <img src="kepek/DSC7025.webp" alt="kép" draggable="false">
+        </div>
             <button class="jobb">következő kép</button>
         </section>
         <div class="szamlalo"></div>
-        <article>
-
-        </article>
+      <article></article>
     </main>
 </body>
 </html>
