html szerkezet alakítása és beszédesebb class nevek adása

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <body>
     <main>
       <section>
-        <button class="bal">előző kép</button>
+        <div class="nagykep-es-leptetogombok">
+          <button class="elozo-kep-gomb">előző kép</button>
         <div class="nagykep">
           <img src="kepek/DSC7025.webp" alt="kép" draggable="false">
         </div>
-        <button class="jobb">következő kép</button>
-      </section>
+          <button class="kovetkezo-kep-gomb">következő kép</button>
+        </div>
       <div class="szamlalo"></div>
+      </section>
       <article></article>
     </main>
   </body>
