headingek hozzáadása a section és article taghez, footer hozzáadása

--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
   <body>
     <main>
       <section>
+        <h1>Képgaléria</h1>
         <div class="nagykep-es-leptetogombok">
           <button class="elozo-kep-gomb">előző kép</button>
-        <div class="nagykep">
-          <img src="kepek/DSC7025.webp" alt="kép" draggable="false">
-        </div>
+          <div class="nagykep">
+            <img src="kepek/DSC7025.webp" alt="kép" draggable="false">
+          </div>
           <button class="kovetkezo-kep-gomb">következő kép</button>
         </div>
-      <div class="szamlalo"></div>
+        <div ></div>
       </section>
-      <article></article>
+      <article>
+        <h2 class="szamlalo">1 / 5 kép</h2>
+        <div class="galeria"></div>
+      </article>
+      <footer>
+        <span>Fotókat készítette: Cséfalvay Katalin</span>
+        <span>Weboldal: Terényi János</span>
+      </footer>
     </main>
   </body>
 </html>
